force-app/main/default/objects/Customer_Satisfaction_NPS_Insights__c/Customer_Satisfaction_NPS_Insights__c.object-meta.xml
<CustomObject>
    <label>Customer Satisfaction &amp; NPS Insights</label>
    <nameField>
        <displayFormat>CSN-{0000}</displayFormat>
        <label>Customer Satisfaction &amp; NPS Insights Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Satisfaction &amp; NPS Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>