force-app/main/default/objects/Customer_Satisfaction_NPS_Insights__c/fields/Complaint_Resolution_Score__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Resolution_Score__c</fullName>
    <label>Complaint Resolution Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>