force-app/main/default/objects/Customer_Satisfaction_NPS_Insights__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Satisfaction &amp; NPS Insights</relationshipLabel>
    <relationshipName>Customer_Satisfaction_NPS_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>