force-app/main/default/objects/Customer_Satisfaction_NPS_Insights__c/fields/Customer_Sentiment_Call_Chat__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sentiment_Call_Chat__c</fullName>
    <label>Customer Sentiment (Call/Chat)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>