force-app/main/default/objects/Customer_Satisfaction_NPS_Insights__c/fields/Negative_Feedback_Category__c.field-meta.xml
<CustomField>
    <fullName>Negative_Feedback_Category__c</fullName>
    <label>Negative Feedback Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>