force-app/main/default/objects/Customer_Satisfaction_NPS_Insights__c/fields/NPS_Category__c.field-meta.xml
<CustomField>
    <fullName>NPS_Category__c</fullName>
    <label>NPS Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>