force-app/main/default/objects/Customer_Satisfaction_NPS_Insights__c/fields/NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>NPS_Score__c</fullName>
    <label>NPS Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>