force-app/main/default/objects/Customer_Satisfaction_NPS_Insights__c/fields/Product_Satisfaction_Rating__c.field-meta.xml
<CustomField>
    <fullName>Product_Satisfaction_Rating__c</fullName>
    <label>Product Satisfaction Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>