force-app/main/default/objects/Customer_Satisfaction_NPS_Insights__c/fields/Repeat_Purchase_Intent__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Purchase_Intent__c</fullName>
    <label>Repeat Purchase Intent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>