force-app/main/default/objects/Customer_Satisfaction_NPS_Insights__c/fields/Satisfaction_Trend__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_Trend__c</fullName>
    <label>Satisfaction Trend</label>
    <length>255</length>
    <type>Text</type>
</CustomField>