force-app/main/default/objects/Customer_Satisfaction_NPS_Insights__c/fields/Service_Turnaround_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Service_Turnaround_Satisfaction__c</fullName>
    <label>Service Turnaround Satisfaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>