force-app/main/default/objects/Customer_Satisfaction_NPS_Insights__c/fields/Staff_Behaviour_Rating__c.field-meta.xml
<CustomField>
    <fullName>Staff_Behaviour_Rating__c</fullName>
    <label>Staff Behaviour Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>